fix: home presentation alignments

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,5 +1,14 @@
 app-home {
   > div {
-    width: 30rem;
+    min-width: 20rem;
+    width: 100%;
+
+    > h2 {
+      &.app-title {
+        text-align: center;
+        margin-bottom: 3rem;
+        font-size: 2rem;
+      }
+    }
   }
 }
